change log

### 17.07.2017
- changed (almost) every occasion of einsum to the apropriate multi_dot or outer with dot -> should make more mutithread usage now
- hardcore profiling showed a major slowdown in the usage of np.real and np.imag - replaced those with .real and .imag

### 13.07.2017
- bugfix in offdiagonals where an occurance of multidot had a wrong input type
- bugfix in offdiagsingles where multidot was used for a scalar multiplication (exchanged with *)

### 11.07.2017
- changed timescale plot to be base 10 logarithmic
- added typical energy difference to timescale plot

### 05.07.2017
- added hanning filter to fft for nicer results
- added fitting of weights

### 03.07.2017
- Changed all the asterisks in the greensfunction evaluation to multi_dot because it was shit and didnt give the correct results
- Changed green store to store flattened array because multidot is actually intelligent enough to deal with normal vectors
- Added many debugging message returns to the greensfunction part, please remove later!
- Somehow the energy is still negative, there is a problem somewhere.

### 28.06.2017
- updated main.py to get the cool stuff
- added optimize=true to einsum

### 27.06.2017
- changed off diagonal singles to only semilog plot and split into two plots
- added inlays to the above
- changed eigendecomposition linewidth again

### 26.06.2017
- changed year in last two entrys to be correct
- greensfunction changes:
	- complex conjugate was wrong
	- the time steps in time evolution matrix was dt not the correctly raised power
	- fft has to be divided by number of steps to maintain norm
- added condition to deletion of diagonal elements of operators in updateEigendecomposition (to prevent errors because of not-set variables)

### 21.06.2017
- changed linewidth for all the off-diagonal plots
- added loglog plots to the single off-diagonals averaged
- added logplots and loglog plots to the summed off-diagonals

### 20.06.2017