@@ -3,6 +3,9 @@ change log
 ### 17.07.2017
 - changed (almost) every occasion of einsum to the apropriate multi_dot or outer with dot -> should make more mutithread usage now
 - hardcore profiling showed a major slowdown in the usage of np.real and np.imag - replaced those with .real and .imag
+- MAJOR major speedup by exploiting sparseness of the occupation number matrices
+- finally found the additional dimension problem in the time step - the evolution matrix was a np.matrix which caused self.state to be one as well
+- changed norm back to la.norm
 
 ### 13.07.2017
 - bugfix in offdiagonals where an occurance of multidot had a wrong input type
